improvements for deploy